--- a/Src/[04]-Adding Color/[04]-Adding Color.csproj
+++ b/Src/[04]-Adding Color/[04]-Adding Color.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>_03__Drawing_</RootNamespace>
+    <RootNamespace>_04__Adding_Color</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
