--- a/Src/[05]-Index Buffers/[05]-Index Buffers.csproj
+++ b/Src/[05]-Index Buffers/[05]-Index Buffers.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>_03__Drawing_</RootNamespace>
+    <RootNamespace>_05__Index_Buffers</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
