--- a/Src/[07]-Constant Buffers/[07]-Constant Buffers.csproj
+++ b/Src/[07]-Constant Buffers/[07]-Constant Buffers.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>_03__Drawing_</RootNamespace>
+    <RootNamespace>_07__Constant_Buffers</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
