--- a/Src/[10]-ImGui/[10]-ImGui.csproj
+++ b/Src/[10]-ImGui/[10]-ImGui.csproj
@@ -3,10 +3,11 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>_03__Drawing_</RootNamespace>
+    <RootNamespace>_10__ImGui</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ImGui.NET" Version="1.75.0" />
     <PackageReference Include="Vortice.Direct3D12" Version="1.6.22-beta-gf78fa633fa" />
     <PackageReference Include="Vortice.Direct3D9" Version="1.6.22-beta-gf78fa633fa" />
     <PackageReference Include="Vortice.DirectX" Version="1.6.22-beta-gf78fa633fa" />
