--- a/Src/Renderer/Renderer.csproj
+++ b/Src/Renderer/Renderer.csproj
@@ -4,4 +4,19 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Vortice.Direct3D12" Version="1.8.59" />
+    <PackageReference Include="Vortice.DirectX" Version="1.8.59" />
+    <PackageReference Include="Vortice.Dxc" Version="1.8.59" />
+    <PackageReference Include="Vortice.DXGI" Version="1.8.59" />
+  </ItemGroup>
+
 </Project>
