--- a/Src/Samples/Samples.csproj
+++ b/Src/Samples/Samples.csproj
@@ -4,6 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0-windows</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
+    <StartupObject>Samples.Program</StartupObject>
   </PropertyGroup>
 
 
