--- a/Src/Game/Game.vcxproj
+++ b/Src/Game/Game.vcxproj
@@ -153,6 +153,9 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="stb_image.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
     <Import Project="..\packages\Microsoft.GameInput.2.1.26100.6068\build\native\targets\Microsoft.GameInput.targets" Condition="Exists('..\packages\Microsoft.GameInput.2.1.26100.6068\build\native\targets\Microsoft.GameInput.targets')" />
