--- a/Src/Games/Games.vcxproj.filters
+++ b/Src/Games/Games.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="GameTime.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GameMath.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
