--- a/Src/Games/Games.vcxproj.filters
+++ b/Src/Games/Games.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="GameMath.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="entt.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
