--- a/Src/Game/Game.vcxproj.filters
+++ b/Src/Game/Game.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="RenderSystem.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Components.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
